<resources>
    <string name="app_name">Contacts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_name">Name</string>
    <string name="label_telephone">Telephone</string>
    <string name="label_email">Email</string>
    <string name="label_socialNetwork">Social network</string>
    <string name="label_city">City</string>
    <string name="label_search">Search</string>
    <string name="label_zipCode">Zip Code</string>
    <string name="label_state">State</string>
    <string name="label_type">Type</string>
    <string name="label_street">Street</string>
    <string name="label_neighborhood">Neighborhood</string>
    <string name="label_save">Save</string>
    <string name="msg_field_required">Field required</string>
    <string name="msg_contact_create_sucess">Contact create sucess!</string>
    <string name="label_add">Add</string>
    <string name="msg_email_add">Email add !</string>
    <string name="msg_telefone_add">Telephone add !</string>
    <string name="msg_social_add">Social add !</string>
    <string name="lbl_menu_edit">Edit</string>
    <string name="lbl_menu_delete">Delete</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="msg_confirm_delete">Delete</string>
    <string name="lbl_yes">Yes</string>
    <string name="msg_delete_sucessfull">Delete sucess</string>
    <string name="lbl_no">No</string>
</resources>
